replaced generic ENTITY with E in interface BaseMapper